--- a/Mern-CICD/Jenkinsfile
+++ b/Mern-CICD/Jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
                 stage("Build Backend") {
                     steps {
                         sh "cd Mern-CICD/mern/backend"
-                        sh "docker build -t mern-backend:V1 ./Mern-CICD/mern/"
+                        sh "docker build -t mern-backend:V1 ./Mern-CICD/mern/backend"
                         echo "Backend Docker build successful"
                     }
                 }
