--- a/Mern-CICD/Jenkinsfile
+++ b/Mern-CICD/Jenkinsfile
@@ -64,8 +64,17 @@ pipeline {
         stage("Deploy") {
             steps {
                 echo "Deploying"
-                // Add your deployment steps here (e.g., SSH into a server, Docker run, etc.)
-            }
+                sh """
+                    ssh -i \user\rahul\download\demo1.pem ubuntu@16.170.237.234
+                    docker pull ${env.DOCKERHUB_USER}/mern-frontend:V1 // Pulling fronend image
+                    docker pull ${env.DOCKERHUB_USER}/mern-frontend:V1 // Pulling backend image
+                """
+                echo "Running docker container"
+                sh """
+                    docker run -d -p 5050:5050 ${env.DOCKERHUB_USER}/mern-frontend:V1
+                    docker run -d -p 5173:5173 ${env.DOCKERHUB_USER}/mern-backend:v1
+                """
+                }
         }
     }
 }
