--- a/Mern-CICD/Jenkinsfile
+++ b/Mern-CICD/Jenkinsfile
@@ -65,15 +65,19 @@ pipeline {
             steps {
                 echo "Deploying"
                 sh """
-                    ssh -i \user\rahul\download\demo1.pem ubuntu@16.170.237.234
-                    docker pull ${env.DOCKERHUB_USER}/mern-frontend:V1 // Pulling fronend image
-                    docker pull ${env.DOCKERHUB_USER}/mern-frontend:V1 // Pulling backend image
-                """
-                echo "Running docker container"
-                sh """
+                    # SSH into the remote server
+                    ssh -i /mnt/c/Users/rahul/downloads/demo1.pem ubuntu@16.170.237.234
+
+                    # Pulling frontend and backend images from Docker Hub  
+                    docker pull ${env.DOCKERHUB_USER}/mern-frontend:V1  
+                    docker pull ${env.DOCKERHUB_USER}/mern-frontend:V1  
+               
+                    # Pulling frontend and backend images from Docker Hub  
                     docker run -d -p 5050:5050 ${env.DOCKERHUB_USER}/mern-frontend:V1
                     docker run -d -p 5173:5173 ${env.DOCKERHUB_USER}/mern-backend:v1
+
                 """
+                echo "deployment completed sucessfully"
                 }
         }
     }
