--- a/Mern-CICD/Jenkinsfile
+++ b/Mern-CICD/Jenkinsfile
@@ -72,16 +72,16 @@ pipeline {
             steps {
                 echo "Deploying"
                 sh """
-                    # SSH into the remote server
                     ssh -T -i /mnt/c/Users/rahul/downloads/demo1.pem ubuntu@13.60.245.165 << 'EOF'
-                         # Pulling frontend and backend images from Docker Hub  
-                            docker pull amanahuja03/mern-backend:V1
-                            docker pull amanahuja03/mern-frontend:V1  
-                         # Pulling frontend and backend images from Docker Hub  
-                            docker run -d -p 5051:5050 amanahuja03/mern-frontend:V1
-                            docker run -d -p 5173:5173 amanahuja03/mern-backend:V1
-                        EOF
-                """
+                        # Pulling frontend and backend images from Docker Hub  
+                          docker pull amanahuja03/mern-backend:V1
+                          docker pull amanahuja03/mern-frontend:V1  
+
+                        # Running the Docker containers
+                          docker run -d -p 5051:5050 amanahuja03/mern-frontend:V1
+                          docker run -d -p 5173:5173 amanahuja03/mern-backend:V1
+                    EOF
+
                 echo "deployment completed sucessfully"
                 }
         }
