--- a/E-pharmacy application/Helm-Repo/epharmacy-frontend-chart/values.yaml
+++ b/E-pharmacy application/Helm-Repo/epharmacy-frontend-chart/values.yaml
@@ -1,8 +1,13 @@
+global:
+  namespace: epharmacy
+  role: backend
+  version: v1
+
 replicaCount: 2
 
 image:
-  repository: your-image
-  tag: tag
+  repository: frontend-service
+  tag: v1
   pullPolicy: IfNotPresent
 
 service:
@@ -18,30 +23,21 @@ resources:
     memory: "1.5Gi"
     cpu: "1Gi"
 
-env:
-  configMap:
-    customerLoginUrl: "http://localhost:6100/epharmacy/customer-api/customer/login"
-    getAllMedicinesUrl: "http://localhost:6200/epharmacy/medicine-api/medicines/pageNumber/"
-    registerCustomerUrl: "http://localhost:6100/epharmacy/customer-api/customer/register"
-    getCustomerCartUrl: "http://localhost:6100/epharmacy/customer-api/customer/cart/getCartDetails"
-
 pvc:
   claimName: azure-disk-sc
 
-data:
-  tls.crt: <base64-encoded-tls.crt>
-  tls.key: <base64-encoded-tls.key>
+hpa: 
+  metric:
+    name: Http_requests per minute
+    target:
+      type: AverageValue
+      averageValue: "10000"  # Adjust this value based on your application's needs
 
-metric:
-  name: Http_requests per minute
-  target:
-    type: AverageValue
-    averageValue: "10000"  # Adjust this value based on your application's needs
-
-resourcePolicy:
-  minAllowed:
-    cpu: 250m
-    memory: 128Mi
-  maxAllowed:
-    cpu: 1Gi
-    memory: 1.5Gi
+vpa:
+  resourcePolicy:
+    minAllowed:
+      cpu: 250m
+      memory: 128Mi
+    maxAllowed:
+      cpu: 1Gi
+      memory: 1.5Gi
